Fixes: no movement on border change, respond to hovers, border radius, text alignment

--- a/client/web/src/enterprise/code-monitoring/components/CodeMonitorForm.scss
+++ b/client/web/src/enterprise/code-monitoring/components/CodeMonitorForm.scss
@@ -21,6 +21,7 @@
             }
 
             .create-monitor-page__trigger--disabled & {
+                margin: 1rem 0;
                 &:hover {
                     // stylelint-disable-next-line declaration-property-unit-whitelist
                     margin: calc(16px - 1px) -1px;
@@ -29,6 +30,7 @@
             }
 
             .create-monitor-page__actions--disabled & {
+                margin: 1rem 0;
                 &:hover {
                     // stylelint-disable-next-line declaration-property-unit-whitelist
                     margin: calc(16px - 1px) -1px;
